<resources>
    <string name="app_name">SPTransApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_button">helpButton</string>
    <string name="btn_trace_route">Traçar Rota até o Ponto</string>
    <string name="label_select_line">Selecione a Linha</string>
    <string name="header_title">Título</string>
    <string name="header_description">Descrição...</string>
    <string name="btn_close">Fechar</string>
    <string name="title_map_legend">Legenda do Mapa</string>
    <string name="bus_icon">bus icon</string>
    <string name="stop_icon">stop icon</string>
    <string name="label_bus_moving">Ônibus em movimento</string>
    <string name="label_bus_stop">Ponto de Parada</string>
    <string name="btn_got_it">Entendi</string>
    <string name="btn_back">Voltar</string>
    <string name="route_icon">Ícone Rota</string>
    <string name="more_info_button">more info button</string>
    <string name="hint_search">Buscar...</string>
    <string name="hint_search_to_view_lines">Pesquise para ver as linhas</string>
    <string name="search_button">Search button</string>
    <string name="label_clean_filter">Limpar Filtro</string>
    <string name="clear_map">Limpar Mapa</string>
    <string name="bus_corridor">Corredores de Ônibus</string>
    <string name="generic_address">Term. Lapa -> Pça. Ramos de Azevedo</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="generic_line">8000-10</string>
    <string name="generic_destination">Term. Lapa</string>
    <string name="time_icon">Time icon</string>
    <string name="generic_time">15 min</string>
    <string name="route_lines">Linhas</string>
    <string name="route_lines_details">Detalhes da Linha</string>
    <string name="route_bus">Ônibus</string>
    <string name="route_stop">Paradas</string>
    <string name="error_sptrans_auth_failed">Falha ao autenticar na SPTrans</string>
    <string name="selected_line">Line Selecionada</string>
    <string name="destination_label">Destino</string>
    <string name="no_name">Sem Nome</string>
    <string name="showing_bus_data_message">Exibindo todos os ônibus...</string>
    <string name="no_lines_found_message">Nenhuma linha encontrada.</string>
    <string name="map_loaded_message">Mapa carregado!</string>
    <string name="erro_kml_message">Erro KML: %1$s</string>
    <string name="corridor_title_label">Corredores de Ônibus</string>
    <string name="other_roads_title_label">Outras Vias (Ruas)</string>
    <string name="general_traffic_title_label">Trânsito Geral</string>
    <string name="hidden_layers_message">Camadas ocultas.</string>
    <string name="loading_layer_message">Carregando camada...</string>
    <string name="search_predictions_message">Buscando previsões...</string>
    <string name="no_stop_prediction_message">Sem previsões para esta parada.</string>
    <string name="layer_loaded_message">Camada carregada!</string>
    <string name="no_description_message">Sem descrição disponível.</string>
    <string name="kml_error_message">Erro ao exibir KML.</string>
    <string name="google_maps_error_message">Google Maps não encontrado.</string>
    <string name="info_label">Informação</string>
    <string name="stop_label">Stop</string>
    <string name="clean_map_message">Mapa limpo.</string>
    <string name="att_error_message">Erro na atualização: %1$s</string>
    <string name="search_error_message">Erro na busca: %1$s</string>
    <string name="prediction_error_message">Erro na previsão: %1$s</string>
    <string name="search_corridor_error_message">Erro ao buscar corredores: %1$s</string>
    <string name="map_download_error_message">Erro ao baixar mapa de corredores: %1$s</string>
    <string name="fav_icon">fav icon</string>
    <string name="no_fav_lines">Você ainda não tem linhas favoritas.</string>
    <string name="fav_lines">Linhas Favoritas:</string>
</resources>
