<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textview_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_title"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/header_description"
        android:textColor="#333333"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/primary_color"
        android:layout_marginTop="15dp"
        android:text="@string/btn_close" />
</LinearLayout>
