<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="6dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageview_item_bus_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/bus_icon"
            android:src="@drawable/ic_bus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_item_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageview_item_bus_icon"
            app:layout_constraintEnd_toStartOf="@id/imageview_item_arrow"
            app:layout_constraintStart_toEndOf="@id/imageview_item_bus_icon"
            app:layout_constraintTop_toTopOf="@id/imageview_item_bus_icon"
            tools:text="8000-10" />

        <ImageView
            android:id="@+id/imageview_item_route_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/route_icon"
            android:src="@drawable/ic_route"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_item_bus_icon" />

        <TextView
            android:id="@+id/textview_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#616161"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/imageview_item_arrow"
            app:layout_constraintStart_toEndOf="@id/imageview_item_route_icon"
            app:layout_constraintTop_toTopOf="@id/imageview_item_route_icon"
            tools:text="@string/generic_address" />

        <ImageView
            android:id="@+id/imageview_item_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrow_icon"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
