<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_search_lines"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:background="@drawable/bg_rounded_input"
        android:elevation="4dp"
        android:hint="@string/hint_search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btn_search_lines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_search_lines"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_rounded_button"
        android:contentDescription="@string/search_button"
        android:elevation="4dp"
        android:padding="12dp"
        android:src="@android:drawable/ic_menu_search"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/edittext_search_lines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edittext_search_lines" />

    <TextView
        android:id="@+id/textview_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fav_lines"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_search_lines"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_lines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_list_title"
        tools:listitem="@layout/item_line" />

    <ProgressBar
        android:id="@+id/progressbar_lines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_search_to_view_lines"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_search_lines" />

</androidx.constraintlayout.widget.ConstraintLayout>
